# MatrixVectorLibrary

./: README.md  readme.md
project/: createProject_windows.cmd
source/: Arithmetic.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  declMatrixVector.hpp  testVectorMatrix.cpp
